--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-import": "^2.23.4",
     "gh-pages": "^3.2.3",
     "hint": "^6.1.4",
+    "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
     "jest": "^27.0.6",
     "sass": "^1.35.2",
